修复订单流程

--- a/Application/Shop/View/style1/Address/add.html
+++ b/Application/Shop/View/style1/Address/add.html
@@ -100,6 +100,7 @@
 			<div class="am-form-group-sm">
 				<div class="am-form-label">邮编</div>
 				<div class="">
+					<input type="hidden" name="fromsession" value="1" />
 					<input type="tel" name="postcode" class="required am-form-control postcode" value="{$address['zip_code']}"  />
 					<label></label>
 				</div>
