--- a/Application/Shop/View/style1/User/withdraw.html
+++ b/Application/Shop/View/style1/User/withdraw.html
@@ -18,7 +18,7 @@
 			<ul>
 				<li ><font class="am-icon-jpy" style="font-size:3rem;color:#FADB05;"></font></li>
 				<li class="li_info"><font>我的余额</font></li>
-				<li class="li_info"><font class="am-icon-jpy"></font>{$wallet['account_balance']|number_format=###, 2,'.',''}</li>
+				<li class="li_info"><font class="am-icon-jpy"></font>{$wallet['account_balance']/100|number_format=###, 2,'.',''}</li>
 				<!--<font class="am-icon-jpy"></font><br  />
 				<font>我的余额</font><br  />
 				<font>￥0.00</font><br  />-->
