--- a/Application/Admin/View/default/Orders/index.html
+++ b/Application/Admin/View/default/Orders/index.html
@@ -94,11 +94,11 @@
 								时间
 								<i class="fa fa-calendar"></i>
 							</div>
-							<input type="text" name="startdatetime" id="startdatetime" class="form-control input-short" value="{:date('Y-m-d',$startdatetime)}" />
+							<input type="text" name="startdatetime" id="startdatetime" class="form-control input-short" value="{:date('Y-m-d H:i:s',$startdatetime)}" />
 							<div class="input-group-addon">
 								<i class="fa fa-long-arrow-right"></i>
 							</div>
-							<input type="text" name="enddatetime" id="enddatetime" class="form-control input-short" value="{:date('Y-m-d',$enddatetime)}" />
+							<input type="text" name="enddatetime" id="enddatetime" class="form-control input-short" value="{:date('Y-m-d H:i:s',$enddatetime)}" />
 						</div>
 					<button type="submit" class="btn btn-default"><i class="fa fa-search"></i>{:L('BTN_SEARCH')}</button>
 					</div>
