--- a/Application/Shop/View/style1/User/withdraw.html
+++ b/Application/Shop/View/style1/User/withdraw.html
@@ -23,7 +23,7 @@
 				<font>我的余额</font><br  />
 				<font>￥0.00</font><br  />-->
 				<li class="li_btn"><button type="button" class="am-btn am-btn-primary am-btn-block" style="height: 1rem;padding: 0;font-size: 0.4rem;" onclick="toURL('{:U('Shop/User/add')}')">提现</button></li>
-				<li class="li_btn"><button type="button" class="am-btn am-btn-default am-btn-block" style="height: 1rem;padding: 0;font-size: 0.4rem;">提现记录</button></li>
+				<li class="li_btn"><button type="button" class="am-btn am-btn-default am-btn-block" style="height: 1rem;padding: 0;font-size: 0.4rem;" onclick="toURL('{:U('Shop/User/withdrawRecord')}')">提现记录</button></li>
 				<li class="li_mingxi"><a href="#">余额明细</a></li>
 			
 			</ul>
