--- a/Application/Shop/View/style1/Product/detail.html
+++ b/Application/Shop/View/style1/Product/detail.html
@@ -1,5 +1,4 @@
 <extend name="template/base_index2" />
-
 <block name="area_header">
 	<link rel="stylesheet" type="text/css" href="__CSS__/detail.css?v=__APP_VERSION__" />
 	<script type="text/javascript" src="__CDN__/amazeui-lazyload/1.9.3/amazeui.lazyload.min.js"  ></script>
@@ -13,6 +12,26 @@
 		  	text-align: left;
 		  	width: 130px;
 		}
+		
+		
+		.score1 {
+			background-position: -104px -60px;
+		}
+		.score2 {
+			background-position: -78px -60px;
+		}
+		.score3 {
+			background-position: -52px -30px;
+		}
+		.score4 {
+			background-position: -26px -30px;
+		}
+		.score5 {
+			background-position: 0 -30px;
+		}
+		
+		
+		
 		
 	</style>
 </block>
@@ -116,9 +135,9 @@
 				
 			</div>
 			<div class=" am-g am-padding-sm am-text-sm am-fl">
-				<a class="am-u-sm-6 am-text-center" href="tel:{$wxstore['service_phone']}"><i class="am-icon-phone color-weixin am-margin-right-xs "></i>点击联系商家</a>
+				<a class="am-u-sm-6 am-text-center" href="tel:{$wxstore['service_phone']}"><i class="am-icon-phone color-weixin am-margin-right-xs "></i><font size="-1">点击联系商家</font></a>
 				
-				<a class="am-u-sm-6 am-text-center" href="{:U('Tool/BaiduMap/index',array('title'=>$wxstore['name'],'text'=>'电话: '.$wxstore['service_phone'],'lat'=>$wxstore['latitude'],'lng'=>$wxstore['longitude']))}"><i class="am-icon-map-marker"></i>商家地图位置</a> 
+				<a class="am-u-sm-6 am-text-center" href="{:U('Tool/BaiduMap/index',array('title'=>$wxstore['name'],'text'=>'电话: '.$wxstore['service_phone'],'lat'=>$wxstore['latitude'],'lng'=>$wxstore['longitude']))}"><i class="am-icon-map-marker"></i><font size="-1">商家地图位置</font></a> 
 			</div>
 			<div class="p-quick am-cf">
 				<!--
@@ -664,7 +683,7 @@
 		});
 		
 		function loadComment(){
-			window.loadcomment = {p:0,template:""};
+			window.loadcomment = {p:1,template:""};
 			
 			var source  = $("#commenttemplate").html();
 			window.loadcomment.template = Handlebars.compile(source);
@@ -721,9 +740,10 @@
 			}).always(function(){
 				$(".loading").hide();
 				window.loadcomment.ajaxing = false;
-			}).done(function(data){						
+			}).done(function(data){	
+				//alert();
 				var panel = $(".comments");
-				console.log(data);
+				//console.log(data);
 				if(data.status){
 					var html = window.loadcomment.template({data:data.info});
 					panel.html(panel.html()+html);
