--- a/Application/Shop/View/style1/partial/footermenu.html
+++ b/Application/Shop/View/style1/partial/footermenu.html
@@ -9,10 +9,19 @@ id="">
       </a>
     </li>
     <li>
+    <if condition="$userinfo.groupid neq 1">
       <a href="{:U('Shop/Product/search')}" class="">
+       <i class="am-icon-users"></i>
+        <span class="am-navbar-label">我的小店</span>
+      </a>		
+    	
+    	<else />
+      <a href="{:U('Shop/Index/distributor')}" class="">
        <i class="am-icon-users"></i>
         <span class="am-navbar-label">分销中心</span>
       </a>
+  
+      </if>
     </li>
     <li>
       <a href="{:U('Shop/ShoppingCart/index')}" class="">
