--- a/Application/Shop/View/style1/User/info.html
+++ b/Application/Shop/View/style1/User/info.html
@@ -197,6 +197,10 @@
 		  <li class="am-cf"><a href="{:U('Shop/User/withdraw')}"><i class="icon am-icon-cny"></i>提现<i class="am-fr am-icon-chevron-right"></i></a> </li>
 		</ul>
 		
+		<ul class="am-list goto-order">
+		  <li class="am-cf"><a href="{:U('Shop/User/getQrcode')}"><i class="icon am-icon-cny"></i>二维码<i class="am-fr am-icon-chevron-right"></i></a> </li>
+		</ul>
+		
 		<ul class="am-list suggest">
 		  <li class="am-cf"><a href="{:U('Shop/Suggest/add')}"><i class="icon am-icon-question-circle"></i>帮助与反馈<i class="am-fr am-icon-chevron-right"></i></a> </li>
 		</ul>
