--- a/Application/Shop/View/style1/User/getQrcode.html
+++ b/Application/Shop/View/style1/User/getQrcode.html
@@ -7,7 +7,7 @@
 <block name="area_body">
 	<div class="am-text-center">
        页面
-		<img class="am-img-responsive" src="__QRCODE__/qrcode_uid$id.jpg" alt="" />
+		<img class="am-img-responsive" src="__ROOT__/Uploads/Qrcode/qrcode_uid{$id}.jpg" alt="" />
 	</div>	
 	<p></p>
 	<p></p>
