--- a/Application/Shop/View/style1/Index/index.html
+++ b/Application/Shop/View/style1/Index/index.html
@@ -281,7 +281,7 @@
 	<header class="am-header am-header-default grid">
 	  <div class="logo col-2">
 	    <a href="{:U('Shop/Index/index')}" >
-	      <img src="__IMG__/logo.png?v=2" alt="logo"  />
+	      <img src="__IMG__/static/logo.png?v=2" alt="logo"  />
 	    </a>
 	  </div>
 	  
