--- a/Application/Shop/View/style1/partial/footermenu.html
+++ b/Application/Shop/View/style1/partial/footermenu.html
@@ -10,7 +10,7 @@ id="">
     </li>
     <li>
     <if condition="$userinfo.groupid neq 1">
-      <a href="{:U('Shop/Product/search')}" class="">
+      <a href="{:U('Shop/Index/myStore')}" class="">
        <i class="am-icon-users"></i>
         <span class="am-navbar-label">我的小店</span>
       </a>		
