--- a/Application/Shop/View/style1/partial/user_logo.html
+++ b/Application/Shop/View/style1/partial/user_logo.html
@@ -14,4 +14,36 @@
                 </for>
 			</span>
     </div>
+    <style type="text/css">
+    	.a_top{color:#999}
+    </style>
+    
+    <div style=" margin-left:0.8rem;height:0.5rem;">
+    	<table style="color: #999;line-height: 0.2rem; width: 100%;text-align: center;padding: 0;">
+    		<tr>
+    			<td style="">
+    				<a class="a_top" href="{:U('Shop/Product/search')}">
+    				96<br />
+    				全部商品
+    				</a>
+    			</td>
+    			
+    			
+    			<td>
+    				<a class="a_top" href="{:U('Shop/Product/search')}">
+    				<font class="am-icon-star"></font><br />
+    				收藏本店
+    				</a>
+    			</td>
+    			
+    			<td>
+    				<a class="a_top" href="{:U('Shop/User/getQrcode')}">
+    				<font class="am-icon-barcode"></font><br />
+    				二维码
+    				</a>
+    			</td>
+    			
+    		</tr>
+    	</table>
+    </div>
 </div>
