--- a/Application/Shop/View/style1/Index/myStore.html
+++ b/Application/Shop/View/style1/Index/myStore.html
@@ -269,13 +269,8 @@
 </head>
 <body class="theme-default theme-shop ">
 
-
-
-
-
-
-
 <if condition=" $isDistributor ">
+    <include file="style1/partial/user_logo" />
 </if>
 	<header class="am-header am-header-default grid">
 	  <div class="logo col-2">
@@ -283,6 +278,10 @@
 	      <img src="__IMG__/logo.png?v=2" alt="logo"  />
 	    </a>
 	  </div>
+	  
+	  
+	  
+	  
 	  
 	  <div class="js_top_search top-search-wrp col-10">
 	  	<span class="i-search"><i class="am-icon-search"></i>搜索商品、店铺</span>
