--- a/Application/Shop/View/style1/Index/myStore.html
+++ b/Application/Shop/View/style1/Index/myStore.html
@@ -273,9 +273,9 @@
     <include file="style1/partial/user_logo" />
 </if>
 	<header class="am-header am-header-default grid">
-	  <div class="logo col-2">
+	    <div class="logo col-2">
 	    <a href="{:U('Shop/Index/index')}" >
-	      <img src="__IMG__/logo.png?v=2" alt="logo"  />
+	      <img src="__IMG__/static/logo.png?v=2" alt="logo"  />
 	    </a>
 	  </div>
 	  
