--- a/Application/Shop/View/style1/User/info.html
+++ b/Application/Shop/View/style1/User/info.html
@@ -154,6 +154,30 @@
 			height: 14px;
 			border-right: 1px #ddd solid;
 		}
+		
+		.theme-shop .am-gotop-fixed {
+			  bottom: 3rem;
+			  left: 0.2rem;
+			  width: 1.5rem;
+		}
+		.theme-shop .am-gotop-fixed .am-gotop-icon {
+			  width: 100%;
+			  height: 1.5rem;
+			  line-height: 1.3rem;
+			  background-color: #FF4400;
+			  vertical-align: middle;
+			  color: #FAFAFA;
+			  border-radius: 50%;
+		}
+		body {
+			  position: relative;
+			  background: #fff;
+			  font-family: "Segoe UI","Lucida Grande",Helvetica,Arial,"Microsoft YaHei",FreeSans,Arimo,"Droid Sans","wenquanyi micro hei","Hiragino Sans GB","Hiragino Sans GB W3",FontAwesome,sans-serif;
+			  font-weight: 400;
+			  line-height: 1.6;
+			  color: #333;
+			  font-size: 0.6rem;
+		}
 	</style>
 </block>
 
