--- a/Application/Shop/View/style1/partial/user_logo.html
+++ b/Application/Shop/View/style1/partial/user_logo.html
@@ -16,10 +16,10 @@
     </div>
     <style type="text/css">
     	.user_logo_ul li{float:left;margin-left: 1.5rem;padding-top:0.2rem;text-align: center;}
-    	a.a_top:link {color:#999}		/* 未访问的链接 */
-		a.a_top:visited {color:#999}	/* 已访问的链接 */
-		a.a_top:hover {color:#999}	/* 鼠标移动到链接上 */
-		a.a_top:active {color:#999}
+    	a.a_top:link {color:#666;font-size: 0.25rem;}		/* 未访问的链接 */
+		a.a_top:visited {color:#666;font-size: 0.25rem;}	/* 已访问的链接 */
+		a.a_top:hover {color:#666;font-size: 0.25rem;}	/* 鼠标移动到链接上 */
+		a.a_top:active {color:#666;font-size: 0.25rem;}
     </style>
     
    
@@ -29,10 +29,10 @@
    				全部商品
    			</li>
    		</a>
-   		<a class="a_top" href="{:U('Shop/Product/search')}">
+   		<!---->
+   		<a class="a_top" href="javascript:alertMsg('该功能尚未开放')">
    			<li>
    				<font class="am-icon-star"></font><br />
-	
    				收藏本店
    			</li>
    		</a>
