--- a/Application/Shop/View/style1/Index/distributor.html
+++ b/Application/Shop/View/style1/Index/distributor.html
@@ -41,7 +41,7 @@
 		
 		</div>
 		<div class="div_main">
-		    <p>欢迎加入<font color="#F0005E">KISSLADY卡诗兰</font>,请填写申请信息！</p>
+		    <p>欢迎加入<font color="#F0005E">{:C('BRAND_NAME')}</font>,请填写申请信息！</p>
 		
 		    <p>邀请人：<font color="#F0005E">{$referrer.nickname}</font>（请核对）</p>
 		
