--- a/Application/Shop/View/style1/User/order.html
+++ b/Application/Shop/View/style1/User/order.html
@@ -242,6 +242,11 @@
               <a href="{:U('Shop/Pay/pay')}?id={{orderid}}" class="am-btn-xs am-btn am-btn-primary">立即支付</a>
               <a href="{:U('Shop/Orders/cancelOrder')}?id={{orderid}}" data-tip="确定取消订单?操作无法恢复!" class="ajax-get confirm am-btn-xs am-btn am-btn-default">取消订单</a>              
 	  		 {{/eq}}
+
+            {{#eq pay_status 1}}
+
+            <span class="am-text-xs am-text-danger">已支付</span><br/>
+            {{/eq}}
               
               {{#eq pay_status 5}}
               
