--- a/Application/Admin/View/default/Orders/statics.html
+++ b/Application/Admin/View/default/Orders/statics.html
@@ -2,7 +2,6 @@
 
 
 <block name="area_header">
-
 	<link rel="stylesheet" type="text/css" media="all" href="__CDN__/jquery-datetimepicker/jquery.datetimepicker.css">
 	<script type="text/javascript" src="__CDN__/jquery-datetimepicker/jquery.datetimepicker.js"></script>
 </block>
@@ -13,7 +12,7 @@
 		{:W('Menus/left')}
 		<div class="admin-main-content">
 			{:W('Menus/breadcrumb')}
-			
+			<!--
 			<div class="col-lg-12 col-md-12 col-sm-12">
 				
 				<div class="col-lg-4 col-md-4 col-sm-4 ">
@@ -33,7 +32,8 @@
 				</div>
 				
 			</div>
-			
+			-->
+			<center style="margin-top:100px;"><img src="__IMG__/welcome.png" /></center>
 		</div>
 		<!-- END admin-main-content -->
 	</div>
