--- a/Application/Shop/View/style1/Product/detail.html
+++ b/Application/Shop/View/style1/Product/detail.html
@@ -30,9 +30,17 @@
 			background-position: 0 -30px;
 		}
 		
+		.p-content .am-tabs-default ul li.am-active a{
+			border-bottom:2px solid #85AFD3 ;
+			background:lightgray;
+		}
 		
 		
-		
+		.countStyle{
+			border: 1px solid #ccc;
+			background: white;
+			text-align: center;
+		}
 	</style>
 </block>
 
@@ -66,9 +74,18 @@
 		<div class="p-info">
 			<p class="p-name">{$product.name}</p>
 			<div class="p-price" >
-				<p class="">¥{:number_format($product['price']/100,1)}</p>
-				<p class="lgray p-ori-price">价格:<del>¥{:number_format($product['ori_price']/100,1)}</del></p>
-				
+				<p class="" style="">价格:<font color="orangered" size="+1">¥{:number_format($product['price']/100,2)}</font>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;数量:
+					<input type="button" class="countStyle" onclick="subtract()" value="-" style="width:20px;border-radius: 50%;"/>
+					<input type="text" name="sku_count" size="5" value="1" class="countStyle" onchange="checkNum()"/>
+					<input type="button" class="countStyle"  onclick="add()" value="+" style="border-radius: 50%;width:20px;"/>
+				</p>
+				<p class="lgray p-ori-price">原价:<del>¥{:number_format($product['ori_price']/100,2)}</del>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<font color="#666">库存:<font>{$product.quantity}</font></font>
+					<input type="hidden" id="quantity" value="{$product.quantity}" />	
+					
+				</p>
 			</div>
 			<ul class="am-avg-sm-3 am-list p-extra lgray">
 				<li class="am-text-left" ><if condition="$product['attrext_ispostfree'] eq 1" >包邮<else/>{$express_str}</if></li>
@@ -76,10 +93,7 @@
 				<li class="am-text-center">月销：{$monthlySales}</li>
 				<li class="am-text-right">{$product.loc_city}</li>
 			</ul>
-			<!--<button type="button" class="am-btn am-btn-success am-btn-xs" onclick='toURL("{:U('Shop/Index/distributor')}")'>我要分销</button>-->
-			
 		</div>
-		
 		<!--
         	作者：hebiduhebi@126.com
         	时间：2015-05-07
@@ -93,9 +107,10 @@
 				<div class="service-item am-margin-right-sm">
 					<i class="am-icon-check-circle-o  am-text-danger  am-margin-right-xs"></i>如实描述
 				</div>
+				<!--
 				<div class="service-item am-margin-right-sm">
 					<i class="am-icon-check-circle-o  am-text-danger  am-margin-right-xs"></i>1小时内送货上门
-				</div>
+				</div>-->
 				<div class="service-item am-margin-right-sm">
 					<i class="am-icon-check-circle-o  am-text-danger  am-margin-right-xs"></i>支持货到付款体验
 				</div>
@@ -165,21 +180,21 @@
 				</a>
 			</div>
 		</div>
-		
+	
 		<!-- 1. 商品详情
 			 2. 产品参数
 			-->
 		<div class="p-content">
-			<div data-am-widget="tabs"  class="am-tabs am-tabs-d2">
+			<div data-am-widget="tabs"  class="am-tabs am-tabs-default">
 				<ul class="am-tabs-nav am-cf" id="detail-tabs">
-					<li class="am-active">
-						<a href="[data-tab-panel-0]">图文详情</a>
+					<li class="am-active" style="">
+						<a href="[data-tab-panel-0]" style="font-size: 1.2rem;">图文详情</a>
 					</li>
 					<li class="">
-						<a href="[data-tab-panel-1]">产品参数</a>
+						<a href="[data-tab-panel-1]" style="font-size: 1.2rem;">产品参数</a>
 					</li>
 					<li class="">
-						<a href="[data-tab-panel-2]" data-item="evaluation">累计评价</a>
+						<a href="[data-tab-panel-2]" data-item="evaluation" style="font-size: 1.2rem;">累计评价</a>
 					</li>
 				</ul>
 				<div class="am-tabs-bd">
@@ -189,6 +204,9 @@
                         	时间：2015-04-23
                         	描述：图文详情
                         -->
+                        <empty name="details">
+                        	<center style="color:#999">暂无详情</center>
+                        <else />
 						<volist name="details" id="vo">
 							<?php
 							 if($vo->type == 'text'){
@@ -198,6 +216,7 @@
 								echo "<img class='am-responsive-width lazy' data-original='".$vo->ct."' />";
 							} ?>
 						</volist>
+						</empty>
 					</div>
 					<div data-tab-panel-1 class="am-tab-panel ">
 					
@@ -218,15 +237,18 @@
 		</div>
 		
 		<div class="footer-menu btn-controls">
-		      <a data-am-loading="{spinner: 'circle-o-notch', loadingText: '加入购物车...'}" href='#' onclick='addToCart();' class="js_add_to_cart am-btn-sm am-btn am-btn-primary">
-		        <span class="add-cart">加入购物车</span>
+		     <!-- <a data-am-loading="{spinner: 'circle-o-notch', loadingText: '放入篮子...'}" href='#' onclick='addToCart();'  class="js_add_to_cart am-btn-sm am-btn am-btn-primary"  style="border-radius:10px;background:#B0FF54 ;border: 1px solid #B0FF54;">
+		        <span class="add-cart">放入购物车</span>
 		      </a>
-		      
-		      <a  href="#" onclick="return buyProduct();"  class=" am-btn am-btn-sm  am-btn-danger">
+		     
+		      <a  href="#" onclick="return buyProduct();"  class=" am-btn am-btn-sm  am-btn-danger" style="border-radius:10px;background:#FF54B0 ;border: 1px solid #FF54B0;">
 		        <span class="buy">立即购买</span>
 		      </a>
+		      
+		    -->
+		      <span  style="background:#FF8000;padding: 0.4rem 3.5rem;font-size: 1rem;color: white;font-family: '微软雅黑'; border-radius: 0.2rem;" onclick='addToCart()'><font class="am-icon-dollar"></font>&nbsp;立即购买</span>
+		      <span  style="background: white;margin-left:0.2rem;padding: 0.4rem 3.5rem;font-size:1rem;font-family: '微软雅黑';border-radius: 0.2rem" onclick="return buyProduct()" ><font class="am-icon-shopping-cart"></font>&nbsp;放入购物车</span>
 		</div>
-		
 		<eq name="product['has_sku']" value="1">
 		
 		<div class="sku-panel-mask js_hide" style="opacity:0;left:100%">
@@ -262,7 +284,7 @@
 				 </div>
 			</div>
 			</div>
-			
+			<!--
 			<div class="btn-controls">				
 			    <a data-am-loading="{spinner: 'circle-o-notch', loadingText: '加入购物车...'}" href='#' onclick='addToCart();' class="js_add_to_cart am-btn am-btn-primary">
 			       <span class="add-cart">加入购物车</span>
@@ -271,7 +293,7 @@
 			      <span class="buy">立即购买</span>
 			    </a>
 			</div>
-			
+			-->
 		</div>
 
 		</div>
@@ -286,8 +308,6 @@
 </block>
 
 <block name="area_footer">
-	
-	<include  file="partial/product_footer" />
 	
 	<script type="text/javascript" src="__CDN__/handlebar/3.0.3/handlebars.js?v=1.0"></script>
 	
@@ -577,7 +597,7 @@
 			}else{
 				$(".sku-panel-mask .js_add_to_cart").removeClass("onlyone").show();
 				$(".sku-panel-mask .js_buy").removeClass("onlyone").show();
-				$(".sku-panel-mask .add-cart").text("加入购物车");
+				$(".sku-panel-mask .add-cart").text("放入购物车");
 				$(".sku-panel-mask .buy").text("立即购买");
 			}
 //			$(".sku-panel-mask").show().slideUp(800);
@@ -724,7 +744,7 @@
 			});
 			
 		}
-		
+		var pl=0;
 		function queryComments(productid){
 			if(window.loadcomment.ajaxing){
 				console.log("cache");
@@ -746,8 +766,16 @@
 				window.loadcomment.ajaxing = false;
 			}).done(function(data){	
 				//alert();
+				
 				var panel = $(".comments");
-				//console.log(data);
+				
+				if(data.info==null){
+					if(pl==0){
+						panel.html(panel.html()+'<br /><center style="color:#999">没有更多评论</center>');
+					}
+					pl=1;
+				}
+				console.log(data);
 				if(data.status){
 					var html = window.loadcomment.template({data:data.info});
 					panel.html(panel.html()+html);
@@ -757,14 +785,44 @@
 				}
 			});
 		}
+		 
+		/**
+		 * 减数量
+		 */
+		function subtract(){
+			var $sku_count=$("input[name='sku_count']");
+			if($sku_count.val()==1){
+				return;
+			}
+			$sku_count.val($sku_count.val()-1);
+		}
+		
+		/**
+		 *加数量 
+		 */
+		function add(){
+			var $sku_count=$("input[name='sku_count']");
+			if($sku_count.val()==$("#quantity").val()){
+				return;
+			}
+			$sku_count.val(parseInt($sku_count.val())+1);
+		}
+		
+		/**
+		 * 检查是否为整数 ,是否合理
+		 */
+		function checkNum(){
+			var $sku_count=$("input[name='sku_count']");
+			$reg=/^\+?[1-9][0-9]*$/;
+			if(!$reg.test($sku_count.val())){
+				$sku_count.val(1);
+			}
+			if($sku_count.val()>$("#quantity").val()){
+				$sku_count.val($("#quantity").val());
+			}
+		}
 		
 	</script>
-	
-	<!--<script type="text/javascript">
-		function toURL(){
-			
-		}
-	</script>-->
 	
 </block>
 
