修复库存减少的问题（订单确认后）

--- a/Application/Shop/View/style1/Index/index.html
+++ b/Application/Shop/View/style1/Index/index.html
@@ -400,7 +400,7 @@
     	描述：首页嵌入广告02
     -->
 	
-	<div class="am-text-center" style="margin: 0.2rem 0;border-bottom: 1px solid #E2CCCC;">推荐商品</div>
+		<div class="am-text-center" style="margin: 0.2rem 0;background: #ccc;color: white;padding: 10px;  border-bottom: 1px solid #E2CCCC;">推荐商品</div>
 	<div class="product-list grid">
 		<volist name="recommend_products" id="vo">
 				<div class="product-wrp col-6">
