--- a/Application/Shop/View/style1/Product/detail.html
+++ b/Application/Shop/View/style1/Product/detail.html
@@ -237,7 +237,7 @@
 		</div>
 		
 		<div class="footer-menu btn-controls">
-		     <!-- <a data-am-loading="{spinner: 'circle-o-notch', loadingText: '放入篮子...'}" href='#' onclick='addToCart();'  class="js_add_to_cart am-btn-sm am-btn am-btn-primary"  style="border-radius:10px;background:#B0FF54 ;border: 1px solid #B0FF54;">
+		     <!-- <a data-am-loading="{spinner: 'circle-o-notch', loadingText: '放入购物车...'}" href='#' onclick='addToCart();'  class="js_add_to_cart am-btn-sm am-btn am-btn-primary"  style="border-radius:10px;background:#B0FF54 ;border: 1px solid #B0FF54;">
 		        <span class="add-cart">放入购物车</span>
 		      </a>
 		     
@@ -246,8 +246,8 @@
 		      </a>
 		      
 		    -->
-		      <span  style="background:#FF8000;padding: 0.4rem 3.5rem;font-size: 1rem;color: white;font-family: '微软雅黑'; border-radius: 0.2rem;" onclick='addToCart()'><font class="am-icon-dollar"></font>&nbsp;立即购买</span>
-		      <span  style="background: white;margin-left:0.2rem;padding: 0.4rem 3.5rem;font-size:1rem;font-family: '微软雅黑';border-radius: 0.2rem" onclick="return buyProduct()" ><font class="am-icon-shopping-cart"></font>&nbsp;放入购物车</span>
+		      <span  style="background:#FF8000;padding: 0.4rem 3.5rem;font-size: 1rem;color: white;font-family: '微软雅黑'; border-radius: 0.2rem;" onclick='return buyProduct()'><font class="am-icon-dollar"></font>&nbsp;立即购买</span>
+		      <span  style="background: white;margin-left:0.2rem;padding: 0.4rem 3.5rem;font-size:1rem;font-family: '微软雅黑';border-radius: 0.2rem" onclick="addToCart()" ><font class="am-icon-shopping-cart"></font>&nbsp;放入购物车</span>
 		</div>
 		<eq name="product['has_sku']" value="1">
 		
