--- a/Application/Shop/View/style1/Index/index.html
+++ b/Application/Shop/View/style1/Index/index.html
@@ -265,6 +265,12 @@
             .user-banner img{
                 height: 90px;
             }
+            
+            
+            .a_more:hover{color: #666;}
+            .a_more:link{color: #666;}
+            .a_more:active{color: #666;}
+            .a_more:visited{color: #666;}
         </style>
 </head>
 <body class="theme-default theme-shop ">
@@ -385,7 +391,9 @@
 		<img src="__IMG__/ad_default.jpg?v=1.0"  alt="广告位招租" />
 		</if>
 	</div>
-	  <div class="ad ad1">
+	
+	
+	<div class="ad ad1" style="margin-top:0.5rem;">
 		<if condition="count($ads) gt 1">
 		<a href="{$ads[1].url}" ><img src="{$ads[1].img|default='__IMG__/ad_default.jpg?v=1.0'}" alt="{$ads[1].title}" /></a>
 		<else />
@@ -399,8 +407,60 @@
     	时间：2015-04-22
     	描述：首页嵌入广告02
     -->
+    
+    
+	<div style="width: 100%;margin-top: 20px;background: white;padding-top:0.2rem;padding-bottom:0.2rem;">
+		<span style="background:red; padding:0.3rem 0.1rem;"></span>
+		<span style="padding-top:0.3rem;padding-bottom:0.3rem;padding-left:5px;font-weight: bold;">最新商品</span>
+		<a class="a_more" href="javascript:alertMsg('别急,开发中')"><span style="margin-left:65%;">更多<span class="am-icon-caret-square-o-right" style="color:#FF0000;"></span></span></a>
+	</div>
+	<div class="product-list grid">
+		<volist name="new_products" id="vo">
+				<div class="product-wrp col-6">
+					<div class="product-item">
+						<a href="{:U('Shop/Product/detail',array('id'=>$vo['id']))}">
+						<div class="p-main-img" ><img src="__IMG__/p240x240.jpg" data-original="{$vo.main_img}" class="lazy" alt="{$vo.name}"/></div>
+						<div class="p-name" >{$vo.name}</div>
+						<div class="p-price" >¥{:number_format($vo['price']/100,1)}<del>¥{:number_format($vo['ori_price']/100,1)}</del></div>
+						<i class="zk">{:number_format(10.0*($vo['price']/$vo['ori_price']),1)}折</i>
+						</a>
+					</div>
+				</div>
+		</volist>
+	</div>
 	
-		<div class="am-text-center" style="margin: 0.2rem 0;background: #ccc;color: white;padding: 10px;  border-bottom: 1px solid #E2CCCC;">推荐商品</div>
+	
+	<div style="width: 100%;margin-top: 20px;background: white;padding-top:0.2rem;padding-bottom:0.2rem;">
+		<span style="background:green; padding:0.3rem 0.1rem;"></span>
+		<span style="padding-top:0.3rem;padding-bottom:0.3rem;padding-left:5px;font-weight: bold;">热门商品</span>
+		<a href="javascript:alertMsg('别急,开发中')"><span style="margin-left: 65%;">更多<span class="am-icon-caret-square-o-right" style="color:green"></span></span>
+		</a>
+	</div>
+	<div class="product-list grid">
+		<volist name="hot_products" id="vo">
+				<div class="product-wrp col-6">
+					<div class="product-item">
+						<a href="{:U('Shop/Product/detail',array('id'=>$vo['id']))}">
+						<div class="p-main-img" ><img src="__IMG__/p240x240.jpg" data-original="{$vo.main_img}" class="lazy" alt="{$vo.name}"/></div>
+						<div class="p-name" >{$vo.name}</div>
+						<div class="p-price" >¥{:number_format($vo['price']/100,1)}<del>¥{:number_format($vo['ori_price']/100,1)}</del></div>
+						<i class="zk">{:number_format(10.0*($vo['price']/$vo['ori_price']),1)}折</i>
+						</a>
+					</div>
+				</div>
+		</volist>
+	</div>
+    
+    
+    
+    
+	
+	<div style="width: 100%;margin-top: 20px;background: white;padding-top:0.2rem;padding-bottom:0.2rem;">
+		<span style="background:blue; padding:0.3rem 0.1rem;"></span>
+		<span style="padding-top:0.3rem;padding-bottom:0.3rem;padding-left:5px;font-weight: bold;">推荐商品</span>
+		<a href="javascript:alertMsg('别急,开发中')"><span style="margin-left:65%;">更多<span class="am-icon-caret-square-o-right" style="color:blue;"></span></span>
+		</a>
+	</div>
 	<div class="product-list grid">
 		<volist name="recommend_products" id="vo">
 				<div class="product-wrp col-6">
@@ -415,6 +475,8 @@
 				</div>
 		</volist>
 	</div>
+	
+	
 	<include  file="style1/partial/footermenu" />
 	<footer data-am-widget="footer" class="am-footer am-footer-default" data-am-footer="{  }">
 			<div class="am-footer-switch">
