--- a/Application/Admin/View/default/Datatree/add.html
+++ b/Application/Admin/View/default/Datatree/add.html
@@ -66,6 +66,14 @@
 							<div class="help-block">(请输入排序，从大到小排序)</div>
 						</div>
 					</div>
+					
+					<div class="form-group">
+						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">关联</label>
+						<div class="col-md-10 col-lg-10">
+							<input type="text" class="required form-control input-short" value="0" name="code"  placeholder="">
+							<div class="help-block">(选填)</div>
+						</div>
+					</div>
 					<div class="form-group">
 						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">备注</label>
 						<div class="col-md-10 col-lg-10">
