--- a/Application/Shop/View/style1/Pay/pay.html
+++ b/Application/Shop/View/style1/Pay/pay.html
@@ -26,6 +26,12 @@
 				height: 40px;
 			}
 			
+			.header .am-topbar{
+				font-size: 0.5rem;
+	  			padding: 5px 16px;
+	  			min-height: 20px;
+	  			margin-bottom: 0px;
+			}
 	  		
 	
 	  		.am-form label{
