--- a/Application/Shop/View/style1/Product/detail.html
+++ b/Application/Shop/View/style1/Product/detail.html
@@ -143,6 +143,7 @@
         	时间：2015-04-23
         	描述：店铺信息
         -->
+        <!--
 		<div class="p-shop am-cf" data-spm="shop">
 			<div class="p-logo">
 				<img class="am-circle" src="{$wxstore['logo']}">
@@ -158,21 +159,21 @@
 				
 				<a class="am-u-sm-6 am-text-center" href="{:U('Tool/BaiduMap/index',array('title'=>$wxstore['name'],'text'=>'电话: '.$wxstore['service_phone'],'lat'=>$wxstore['latitude'],'lng'=>$wxstore['longitude']))}"><i class="am-icon-map-marker"></i><font size="-1">商家地图位置</font></a> 
 			</div>
-			<div class="p-quick am-cf">
+			<div class="p-quick am-cf">-->
 				<!--
                 	作者：hebiduhebi@126.com
                 	时间：2015-04-23
                 	描述：单店铺－所有宝贝查看
-                -->
+              
 				<a class="c-btn" href="{:U('Shop/Wxstore/allCategory',array('id'=>$product['storeid']))}" style="border-right: 1px solid #FAE4E4;">
 					<span><i class="am-icon-th-list"></i>查看所有商品
 					</span>
-				</a>
+				</a>  -->
 				<!--
                 	作者：hebiduhebi@126.com
                 	时间：2015-04-23
                 	描述：单店铺查看
-                -->
+               
 				<a href="{:U('Shop/Wxstore/view',array('id'=>$product['storeid']))}" class="">
 					<span><i class="am-icon-university"></i>
 						进入店铺
@@ -180,7 +181,7 @@
 				</a>
 			</div>
 		</div>
-	
+		 -->
 		<!-- 1. 商品详情
 			 2. 产品参数
 			-->
