--- a/Application/Shop/View/style1/User/add.html
+++ b/Application/Shop/View/style1/User/add.html
@@ -4,6 +4,14 @@
 
     <meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="__CSS__/user_add.css?v=__APP_VERSION__"/>
+	<style type="text/css">
+		.header .am-topbar{
+			font-size: 0.4rem;
+  			padding: 5px 16px;
+  			min-height: 20px;
+  			margin-bottom: 0px;
+		}
+	</style>
 	<script type="text/javascript" src="__CDN__/jquery-validation/1.13.1/jquery.validate.min.js"> </script> 
 	<script type="text/javascript" src="__CDN__/jquery-validation/1.13.1/localization/messages_zh.js"></script>
 	<script type="text/javascript">
