修改默认加载的图片

--- a/Application/Shop/View/style1/Index/index.html
+++ b/Application/Shop/View/style1/Index/index.html
@@ -386,7 +386,7 @@
 	
 	<div class="ad ad0">
 		<if condition="count($ads) gt 0">
-		<a href="{$ads[0].url}" ><img src="__IMG__/p640x200.jpg" class="lazy" data-original="{$ads[0].img|default='__IMG__/ad_default.jpg?v=1.0'}" alt="{$ads[0].title}" /></a>
+		<a href="{$ads[0].url}" ><img src="__IMG__/p640x200.jpg?V=1.0" class="lazy" data-original="{$ads[0].img|default='__IMG__/ad_default.jpg?v=1.0'}" alt="{$ads[0].title}" /></a>
 		<else />
 		<img src="__IMG__/ad_default.jpg?v=1.0"  alt="广告位招租" />
 		</if>
@@ -419,7 +419,7 @@
 				<div class="product-wrp col-6">
 					<div class="product-item">
 						<a href="{:U('Shop/Product/detail',array('id'=>$vo['id']))}">
-						<div class="p-main-img" ><img src="__IMG__/p240x240.jpg" data-original="{$vo.main_img}" class="lazy" alt="{$vo.name}"/></div>
+						<div class="p-main-img" ><img src="__IMG__/p240x240.jpg?V=1.0" data-original="{$vo.main_img}" class="lazy" alt="{$vo.name}"/></div>
 						<div class="p-name" >{$vo.name}</div>
 						<div class="p-price" >¥{:number_format($vo['price']/100,1)}<del>¥{:number_format($vo['ori_price']/100,1)}</del></div>
 						<i class="zk">New</i>
@@ -441,7 +441,7 @@
 				<div class="product-wrp col-6">
 					<div class="product-item">
 						<a href="{:U('Shop/Product/detail',array('id'=>$vo['id']))}">
-						<div class="p-main-img" ><img src="__IMG__/p240x240.jpg" data-original="{$vo.main_img}" class="lazy" alt="{$vo.name}"/></div>
+						<div class="p-main-img" ><img src="__IMG__/p240x240.jpg?V=1.0" data-original="{$vo.main_img}" class="lazy" alt="{$vo.name}"/></div>
 						<div class="p-name" >{$vo.name}</div>
 						<div class="p-price" >¥{:number_format($vo['price']/100,1)}<del>¥{:number_format($vo['ori_price']/100,1)}</del></div>
 						<i class="zk">Hot！！！</i>
@@ -466,7 +466,7 @@
 				<div class="product-wrp col-6">
 					<div class="product-item">
 						<a href="{:U('Shop/Product/detail',array('id'=>$vo['id']))}">
-						<div class="p-main-img" ><img src="__IMG__/p240x240.jpg" data-original="{$vo.main_img}" class="lazy" alt="{$vo.name}"/></div>
+						<div class="p-main-img" ><img src="__IMG__/p240x240.jpg?V=1.0" data-original="{$vo.main_img}" class="lazy" alt="{$vo.name}"/></div>
 						<div class="p-name" >{$vo.name}</div>
 						<div class="p-price" >¥{:number_format($vo['price']/100,1)}<del>¥{:number_format($vo['ori_price']/100,1)}</del></div>
 						<i class="zk">{:number_format(10.0*($vo['price']/$vo['ori_price']),1)}折</i>
